<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubscribeFragment">

    <FrameLayout
        android:id="@+id/frame_layout_sub"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_sub"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/text_view_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account: Stream: "
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@id/button_audio_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_sub" />

    <Button
        android:id="@+id/button_audio_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muteAudio"
        app:layout_constraintBottom_toTopOf="@id/button_subscribe"
        app:layout_constraintEnd_toStartOf="@+id/button_video_sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_video_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muteVideo"
        app:layout_constraintBottom_toTopOf="@id/button_subscribe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_audio_sub" />

<!--
    <Switch
        android:id="@+id/switchDirectionSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:autoSizeTextType="uniform"
        android:text="->"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_codec_sub"
        />


    <Button
        android:id="@+id/button_codec_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Codec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_subscribe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
-->

    <Button
        android:id="@+id/button_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startSubscribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>