<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".PublishFragment">

    <FrameLayout
        android:id="@+id/frame_layout_pub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/textViewPub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <!--
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonCapture"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:layout_editor_absoluteY="656dp" />
    -->

    <TextView
        android:id="@+id/textViewPub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Token: Stream: "
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@id/switchDirectionPub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_pub" />

    <Switch
        android:id="@+id/switchDirectionPub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:autoSizeTextType="uniform"
        android:text="->"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPub" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPub">

        <Button
            android:id="@+id/buttonCodecAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="Audio Codec" />

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="Camera" />

        <Button
            android:id="@+id/buttonCapture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/startCapture" />

        <Button
            android:id="@+id/button_audio_pub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="@string/muteAudio" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <Button
            android:id="@+id/buttonCodecVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="Video Codec" />

        <Button
            android:id="@+id/buttonResolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="Res" />

        <Button
            android:id="@+id/buttonPublish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="@string/startPublish" />

        <Button
            android:id="@+id/button_video_pub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:text="@string/muteVideo" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>